--- a/link-image/3.html
+++ b/link-image/3.html
@@ -15,7 +15,7 @@
 <body>
 <h1> Chi tiết sản phẩm </h1>
 <img src="jcc/4.jpg" height="500px" width="500px" title=" naptop đỏ">
-<a href="unt.html"><h2> Tên quang cáo </h2></br> Quay về </a>
+<a href="baitapchinh.html"><h2> Tên quang cáo </h2></br> Quay về </a>
 <p>Laptop Lenovo IdeaPad 100S 11IBY Z3735/2GB/32GB/Win10
 Đỏ  
 Xanh Dương  
