--- a/link-image/8.html
+++ b/link-image/8.html
@@ -15,7 +15,7 @@
 <body>
 <h1> Chi tiết sản phẩm </h1>
 
-<a href="unt.html">  <img src="148.jpg" height="500px" width="500px" title=" naptop đỏ">
+<a href="baitapchinh.html">  <img src="148.jpg" height="500px" width="500px" title=" naptop đỏ">
  <h2> Tên quang cáo </h2></br> Quay về home </a>
 <p>Laptop Lenovo IdeaPad 100S 11IBY Z3735/2GB/32GB/Win10
 Đỏ  
