--- a/link-image/uw.html
+++ b/link-image/uw.html
@@ -16,7 +16,7 @@
 <body>
 <h1> Chi tiết sản phẩm </h1>
 
-<a href="unt.html"><h2> <img src="jcc/1.jpg" height="500px" width="500px" title=" naptop đỏ"></br> Tên quang cáo </h2></br> Quay về </a>
+<a href="baitapchinh.html"><h2> <img src="jcc/1.jpg" height="500px" width="500px" title=" naptop đỏ"></br> Tên quang cáo </h2></br> Quay về </a>
 <p id="a14"> Laptop Lenovo IdeaPad 100S 11IBY Z3735/2GB/32GB/Win10
 Đỏ  
 Xanh Dương  
