--- a/link-image/4.html
+++ b/link-image/4.html
@@ -9,13 +9,14 @@
      text-transform:capitalize;
      text-align: center;
 	 }
-
 	</style>
 </head>
 <body>
 <h1> Chi tiết sản phẩm </h1>
-<img src="7.jpg" height="500px" width="500px" title=" naptop đỏ">
-<a href="baitapchinh.html"><h2> Tên quang cáo </h2></br> Quay về </a>
+<h2> <i>1.Sản phẩm máy tính</i>  </h2>
+<a href="baitapchinh.html#20"> <img src="7.jpg" height="500px" width="500px" title=" naptop đỏ">
+<h2>  Quay về home </h2></br> </a>
+
 <p>Laptop Lenovo IdeaPad 100S 11IBY Z3735/2GB/32GB/Win10
 Đỏ  
 Xanh Dương  
