--- a/link-image/7.html
+++ b/link-image/7.html
@@ -14,8 +14,8 @@
 </head>
 <body>
 <h1> Chi tiết sản phẩm </h1>
-<img src="10.jpg" height="500px" width="500px" title=" naptop đỏ">
-<a href="baitapchinh.html"><h2> Tên quang cáo </h2></br> Quay về </a>
+<h2>Sản phẩm máy tính</h2>
+<a href="baitapchinh.html#21"><img src="10.jpg" height="500px" width="500px" title=" naptop đỏ"><h2> Quay về Trang chủ </h2></br></a>
 <p>Laptop Lenovo IdeaPad 100S 11IBY Z3735/2GB/32GB/Win10
 Đỏ  
 Xanh Dương  
