--- a/link-image/baitapchinh.html
+++ b/link-image/baitapchinh.html
@@ -12,73 +12,75 @@
 </head>
 <body>
 <h1> Danh sách sản phẩm</h1>
-<h2 id="a13">1.Các sản phẩm.</h2></br>
+<h2 id="a13">.Các sản phẩm.</h2></br>
 <a href="#a12"> cuối trang</a></br>
 
+<p id="11"> 1> </p></br>
 <a href="uw.html"> <img src="jcc/1.jpg" alt=" anh dep " title=" LAp top" height="200px" width="220px">
-<a href="#a14" >
 <h3>Lenovo IdeaPad 100S 11IBY Z3735</h3>Giá</a> </br>  
 <p >3.990.000₫
 2 KHUYẾN MÃI ÁP DỤNG ĐẾN 31/03
 </p></br>
-<p> 2> </p></br>
 
+<p id="14"> 2> </p></br>
 <a href="1.html"> <img src="jcc/2.jpg"height="200px" width="220px">
 <h3>Lenovo IdeaPd 100S 11IBY Z3735</h3></br>Giá</a></br>
 <p>5.490.000₫
 3 KHUYẾN MÃI ÁP DỤNG ĐẾN 31/03
 Cơ hội trúng 25 xe Honda Vision Xem chi tiết</p></br>
-<p> 3> </p></br>
 
+<p id="15"> 3> </p></br>
 <a href="2.html"> <img src="jcc/3.jpg"height="200px" width="220px">
 <h3>Lenovo IeaPad 100S 11IBY Z3735</h3></br> Giá</a></br>
 <p>3.490.000₫
 3 KHUYẾN MÃI ÁP DỤNG ĐẾN 31/03
 Cơ hội trúng 25 xe Honda Vision Xem chi tiết</p></br>
-<p> 4> </p></br>
 
+<p id="16"> 4> </p></br>
 <a href="3.html"> <img src="jcc/4.jpg"height="200px" width="220px">
 <h3>Lenovo IdePad 100S 11IBY Z3735</h3></br> Giá</a></br>
 <p>2.490.000₫
 3 KHUYẾN MÃI ÁP DỤNG ĐẾN <b>31/03</b>
 Cơ hội trúng 25 xe Honda Vision Xem chi tiết</p></br>
-<p> 5> </p></br>
 
-<a href="4.html"> <img src="7.jpg"height="200px" width="220px">
-<h3>Lenovo IdePad 100S 11IBY Z3735</h3></br> Giá</a></br>
+<p id="20"> 5> </p></br>
+<a href="4.html">  <img src="7.jpg"height="200px" width="220px">
+</br>
+<h3 >Lenovo IdePad 100S 11IBY Z3735</h3></br> Giá</a></br>
 <p>5.490.000₫
 3 KHUYẾN MÃI ÁP DỤNG ĐẾN <b>31/03</b>
 Cơ hội trúng 3xe Honda Vision Xem chi tiết</p></br>
-<p> 6> </p></br>
 
+<p id="17"> 6> </p></br>
 <a href="5.html"><img src="6.jpg"height="200px" width="220px">
-<h3>Lenovo IdePad 100S 11IBY Z3735</h3></br> Giá</a></br>
+<h3>Lenovo IdePad 100S 11IBY Z3735</h3></br> Giá</a>
+</br>
 <p>6.490.000₫
 3 KHUYẾN MÃI ÁP DỤNG ĐẾN <b>31/03</b>
 Cơ hội trúng 3xe Honda Vision Xem chi tiết</p></br>
-<p> 7> </p></br>
 
+<p id="18"> 7> </p></br>
 <a href="9.html"><img src="8.jpg"height="200px" width="220px">
 <h3>Lenovo IdePad 100S 11IBY Z3735</h3></br> Giá</a></br>
 <p>8.490.000₫
 3 KHUYẾN MÃI ÁP DỤNG ĐẾN <b>31/03</b>
 Cơ hội trúng 3xe Honda Vision Xem chi tiết</p></br>
-<p> 8> </p></br>
 
+<p id="19"> 8> </p></br>
 <a href="6.html"><img src="9.jpg"height="200px" width="220px">
 <h3>Lenovo IdePad 100S 11IBY Z3735</h3></br> Giá</a></br>
 <p>6.490.000₫
 3 KHUYẾN MÃI ÁP DỤNG ĐẾN <b>31/03</b>
 Cơ hội trúng 3xe Honda Vision Xem chi tiết</p></br>
-<p> 9> </p></br>
 
+<p id="21"> 9> </p></br>
 <a href="7.html"><img src="10.jpg"height="200px" width="220px">
 <h3>Lenovo IdePad 100S 11IBY Z3735</h3></br> Giá</a></br>
 <p>6.490.000₫
 3 KHUYẾN MÃI ÁP DỤNG ĐẾN <b>31/03</b>
 Cơ hội trúng 3xe Honda Vision Xem chi tiết</p></br>
-<p> 10> </p></br>
 
+<p id="22"> 10> </p></br>
 <a href="8.html"><img src="148.jpg"height="200px" width="220px">
 <h3>Lenovo IdePad 100S 11IBY Z3735</h3></br> Giá
 </a></br>
