--- a/link-image/1.html
+++ b/link-image/1.html
@@ -14,8 +14,9 @@
 </head>
 <body>
 <h1> Chi tiết sản phẩm </h1>
+<h2>Sản phẩm máy tính</h2>
 
-<a href="baitapchinh.html"><h2> <img src="jcc/2.jpg" height="500px" width="500px" title=" naptop đỏ"></br> Tên quang cáo </h2></br> Quay về </a>
+<a href="baitapchinh.html#14"> <img src="jcc/2.jpg" height="500px" width="500px" title=" naptop đỏ"></br> <h2> Quay về Trang chủ </h2> </br></a>
 <p>Laptop Lenovo IdeaPad 100S 11IBY Z3735/2GB/32GB/Win10
 Đỏ  
 Xanh Dương  
