--- a/link-image/8.html
+++ b/link-image/8.html
@@ -14,9 +14,10 @@
 </head>
 <body>
 <h1> Chi tiết sản phẩm </h1>
+<h2>Sản phẩm máy tính</h2>
 
-<a href="baitapchinh.html">  <img src="148.jpg" height="500px" width="500px" title=" naptop đỏ">
- <h2> Tên quang cáo </h2></br> Quay về home </a>
+<a href="baitapchinh.html#22">  <img src="148.jpg" height="500px" width="500px" title=" naptop đỏ"></br>
+ <i> Quay về Trang chủ  </i></br> </a>
 <p>Laptop Lenovo IdeaPad 100S 11IBY Z3735/2GB/32GB/Win10
 Đỏ  
 Xanh Dương  
