--- a/link-image/uw.html
+++ b/link-image/uw.html
@@ -15,9 +15,10 @@
 </head>
 <body>
 <h1> Chi tiết sản phẩm </h1>
+<h2>Sản phẩm máy tính</h2>
 
-<a href="baitapchinh.html"><h2> <img src="jcc/1.jpg" height="500px" width="500px" title=" naptop đỏ"></br> Tên quang cáo </h2></br> Quay về </a>
-<p id="a14"> Laptop Lenovo IdeaPad 100S 11IBY Z3735/2GB/32GB/Win10
+<a  href="baitapchinh.html#11"><img src="jcc/1.jpg" height="500px" width="500px" title=" naptop đỏ"></br><h2>  Quay về Trang chủ </h2></br>  </a>
+<p> Laptop Lenovo IdeaPad 100S 11IBY Z3735/2GB/32GB/Win10
 Đỏ  
 Xanh Dương  
 Bạc  
