--- a/bailam/bailam.html
+++ b/bailam/bailam.html
@@ -1,16 +1,22 @@
-<!doctype html>
+
 <html>
 <head>
-	<title> tạo trang image </title>
+	<title> Tạo trang image </title>
 	<meta charet"utf-8";/>
-	<link rel="stylesheet" type="text/css" href="bailam2.css">
+	<link rel="stylesheet" type="text/css" href="bailam.css">
 	
 </head>
 <body > 
-		<h1><img class"123" src="0090.gif" width="50px" height="50px" > </h1>
+		
+		<p id="anh">
+			<a href="#chat">
+			<img src="0090.gif" width="50px" heigth="50px"></a>
+			</p>
+	    </h1>
+		<h2> <u>Danh sách ảnh</u> </h2>
 		<ul> 
-			<li> <a href="https://www.google.com.vn/?gws_rd=ssl"> trang chủ </a> </li>
-			<li><a href="https://www.baomoi.com">tìm kiếm </a></li>
+			<li> <a href="https://www.google.com.vn/?gws_rd=ssl"> <u>Trang Chủ</u> </a> </li>
+			<li><a href="https://www.baomoi.com"><u>Tìm Kiếm</u> </a></li>
 		</ul><br>
 		<h2> anbum ảnh  </h2>
 		<div class="style-image">
@@ -21,8 +27,15 @@
 			<img src="15.jpg" alt="ảnh đẹp" title="ảnh">
 			<img src="16.jpg" alt="ảnh đẹp" title="ảnh">
 		</div>
+		<div>
+			<h3> Hưng.TM </h3>
+		</div>
 		<div id="chat">
-			<img src="bieutuong.jpg">
+			<p> <a href="#anh"> <img src="ims.jpg"></a>
+			
+			</p>
+			
+			
 		</div>
 
 
