--- a/list/list.html
+++ b/list/list.html
@@ -1,49 +1,174 @@
 <html>
-<head>
-	<title> Thời trang shope </title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="list.css">
-	<link rel="stylesheet" type="text/css" href="list2.css">
-</head>
-<body>	
-	<div class="a1" style="background-color:black" >
-	<div>
-	<ul class="pantu">
-	<li class="a3"><a class="a5" href=""> Giới thiệu </a></li>
-	<li class="a3"><a href=""> Tin tức</a></li>
-	<li class="a3"><a href="">	Hỗ trợ khách hàng</a> </li>
-	<li class="a3"><a href=""> Liên hệ</a></li>
-	<ul class="phantu2"> 
-	<li ><a href=""> Tra cứu đơn hàng</a></li>
-	<li ><a href=""> Thẻ thành viên</a></li>
-	</ul>
-	</div></br>
-	<div class="a6">
-	<img class="a7" src="anh.jpg">
-	<input  type="text" class="header" value="" placeholder="Tìm kiếm" required="">
-	</div>
-	<ul class="a9">
-		<li><a href=""> Đăng Kí </a></li>
-		<li><span></span></li>
-		<li><a href=""> Đăng Nhập</a></li>
-	</ul></br>
-	<ul class="home" style="background-color:gray">
-		<li><a title="Trang chủ" href="">Trang Chủ</a></li>
-		<li><a href=""> Sản Phẩm </a></li>
-		<li><a href=""> Khuyến Mãi</a></li>
-		<li><a href=""> Bộ Đồng Phục </a></li>
-		<li><a href=""> Bộ Sưu Tập</a></li>
-	</ul>
-	<ul>
-	<li class="c1">
-	<a href="" class="b2">
-	<img src="image4.jpg" >
-	</a>
-	<a href="" class="b3"><img src="image2.jpg" ></a>
-	<a href="" class="b4"><img src="image3.jpg"></a>
-	</li>
-	</ul>
+   <head>
+      <title> Thời trang shope </title>
+      <meta charset="utf-8">
+      <link rel="stylesheet" type="text/css" href="css/list.css">
+      <link rel="stylesheet" type="text/css" href="css/list2.css">
+      <link rel="stylesheet" type="text/css" href="css/list3.css">
+      <link rel="stylesheet" type="text/css" href="css/list4.css">
+      <script>
+      alert("Chào Mừng Các Bạn");
+      </script>
+   </head>
+   <body>
+      <table>
+      <div class="a1" style="background-color:black"; >
+      <div>
+         <ul class="pantu">
+         <li class="a3"><a class="a5" href=""> Giới thiệu </a></li>
+         <li class="a3"><a href=""> Tin tức</a></li>
+         <li class="a3"><a href=""> Hỗ trợ khách hàng</a> </li>
+         <li class="a3"><a href=""> Liên hệ</a></li>
+         <ul class="phantu2">
+            <li ><a href=""> Tra cứu đơn hàng</a></li>
+            <li ><a href=""> Thẻ thành viên</a></li>
+         </ul>
+      </div>
+      </br>
+      <div class="a6">
+         <img class="a7" src="images/anh.jpg">
+         <input style="outline: none;"  type="text" class="header" value="" placeholder="Tìm kiếm" required="">
+      </div>
+      <ul class="a9">
+         <li><a href=""> Đăng Kí </a></li>
+         <li><span></span></li>
+         <li><a href=""> Đăng Nhập</a></li>
+      </ul></br>
+      <ul class="home" style="background-color: #f1ece9;">
+         <li><a title="Trang chủ" href="">Trang Chủ</a></li>
+         <li><a href=""> Sản Phẩm </a></li>
+         <li><a href=""> Khuyến Mãi</a></li>
+         <li><a href=""> Bộ Đồng Phục </a></li>
+         <li><a href=""> Bộ Sưu Tập</a></li>
+      </ul>
+      </table>
+      <table>
+         <div class="can">
+            <a href="" class="b2 ">
+            <img src="images/image4.jpg" >
+            <span class="sticky hot"></span>       
+            </a>
+            <a href="" class="b3 "><img src="images/image2.jpg" ></a>
+            <a href="" class="b4 "><img src="images/image3.jpg"></a>
+         </div>
+      </table>
+      <table>
+      <div class="d1">
+         <h1>MUA SẮM THEO DANH MỤC SẢN PHẨM</h1>
+      </div>
+      </table>
+      <table class="d2">
+               <tr >
+                  <td class="dodai">
+                     <a class=" item-thumb" href="">
+                        <img class="hot" src="images/hot.png"> 
+                        <img src="images/1.jpg" >
+                        <p>Áo Sơ Mi Dài Tay BamBoo Kẻ A1</p>
+                        <p>421000Đ</p>
+                     </a>
+                  </td>
+                  <td class="dodai">
+                     <a class=" item-thumb text-center" href="">
+                        <img class="hot" src="images/hot.png">
+                        <img src="images/2.jpg">
+                        <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
+                        <p>421000Đ</p>
+                     </a>
+                  </td>
+                  <td class="dodai">
+                     <a class=" item-thumb" href="">
+                        <img class="hot" src="images/hot.png" >
+                        <img src="images/3.jpg"> 
+                        <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
+                        <p>421000Đ</p>
+                     </a>
+                  </td>
+                  <td class="dodai">
+                     <a class=" item-thumb" href="">
+                        <img class="hot" src="images/hot.png" >
+                        <img src="images/4.jpg">
+                        <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
+                        <p>421000Đ</p>
+                     </a>
+                  </td>
+               </tr>
+               <tr>
+                  <td class="dodai">
+                     <a class=" item-thumb" href="">
+                        <img class="hot" src="images/hot.png" >
+                        <img src="images/4.jpg">
+                        <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
+                        <p>421000Đ</p>
+                     </a>
+                  </td>
+                  <td class="dodai">
+                     <a class=" item-thumb" href="">
+                        <img class="hot" src="images/hot.png" > 
+                        <img src="images/5.jpg">                       
+                        <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
+                        <p>421000Đ</p>
+                     </a>
+                  </td>
+                  <td class="dodai">
+                     <a class=" item-thumb" href="">
+                         <img class="hot" src="images/hot.png" >
+                        <img src="images/6.jpg"> 
+                        <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
+                        <p>421000Đ</p>
+                     </a>
+                  </td>
+                  <td class="dodai">
+                     <a class=" item-thumb" href="">
+                        <img class="hot" src="images/hot.png" >
+                        <img src="images/8.jpg"> 
+                        <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
+                        <p>421000Đ</p>
+                     </a>
+                  </td>
+               </tr>
+            </table>
+         
+         </div>
+         <table id="font" >
+            <h2 class="f1">Bộ Sưu Tập</h2>
+            <tr>
+            <td class="f2" ><img src="images/9.jpg"></td>
+            <td class="f2" ><img src="images/10.jpg"></td>
+            <td class="f2" ><img src="images/11.jpg"></td>
+            </tr>
+         </table>
+       <a  href="">  <img class="icon" src="icon/icon.png"> </a>
+       <a  href="">  <img class="tuvan" src="icon/tuvan.png"> </a>
+      <p class="cove" >STYLE GUIDE</p>
+      <audio src="media/divayeu.mp3" autoplay></audio>
+      <a href=""><img src="images/cover.jpg"     width="1680px"></a>
+      <p class="cove" >TIN TỨC</p>
+      <table class="sale1">
+      <tr>
+         <td  class="sale" >
+            <a href=""> <img src="images/eva1.jpg">
+               <p>Khuyến mãi lên tới 50% trong ngày 15/3/2017</p></a>
+         </td>
+         <td  class="sale" >
+            <a href=""> <img src="images/eva2.jpg">
+               <p>THỜI TRANG CÔNG SỞ NAM KHATOCO KHAI TRƯƠNG SHOWROOM</p></a>
+         </td>   
+         <td  class="sale" >
+            <a  href=""> <img src="images/eva3.png">
+               <p>THỜI TRANG CÔNG SỞ NAM KHATOCO VINH DỰ NHẬN GIẢI THƯỞNG HÀNG VIỆT NAM CHẤT LƯỢNG CAO 11 NĂM LIỀN</p></a>
+         </td>
+      </tr>
+         </div>
+      </table>
+   <div class="cuoicung" >
+      <div>
+         <p class="mauchu">Liên Hệ</p>
+            <p class="mauchu">Công ty TNHH Thương Mại KHATOCO</p>
+            <p class="mauchu">07 Võ Thị Sáu, phường Vĩnh Nguyên, thành phố Nha Trang, tỉnh Khánh Hòa, Việt Nam.</p>
+            <p class="mauchu">ĐT: (84) 58.388 9978 - Fax: (84) 58.388 6422</p>
+      </div>
 
+   </div>
 
-</body>
+   </body>
 </html>
