--- a/list/list.html
+++ b/list/list.html
@@ -36,9 +36,26 @@
       </ul></br>
       <ul class="home" style="background-color: #f1ece9;">
          <li><a title="Trang chủ" href="">Trang Chủ</a></li>
-         <li><a href=""> Sản Phẩm </a></li>
-         <li><a href=""> Khuyến Mãi</a></li>
-         <li><a href=""> Bộ Đồng Phục </a></li>
+         <li>
+            <a href=""> Sản Phẩm </a>
+            <ul class="sub-menu">
+               <li><a href="">Hàng Mới</a></li>
+               <li><a href="">Áo Sơ Mi Nam</a>
+               </li>
+               <li><a href="">Áo Thun</a></li>
+               <li><a href=""> Quần jeams</a></li>
+            </ul>
+         </li>
+         <li>
+            <a href=""> Khuyến Mãi</a>
+            <ul class="sub-menu">
+               <li> <a href="">Quần jeams giảm 10%</a> </li>
+               <li><a href=""> ưu đãi lớn</a></li>
+               <li><a href="">Áo da sale</a></li>
+               <li><a href="">Quần bò thái</a></li>
+            </ul>
+         </li>
+         <li><a href=""> Bộ Đồng Phục</a></li>
          <li><a href=""> Bộ Sưu Tập</a></li>
       </ul>
       </table>
