--- a/list/list.html
+++ b/list/list.html
@@ -7,8 +7,8 @@
       <link rel="stylesheet" type="text/css" href="css/list3.css">
       <link rel="stylesheet" type="text/css" href="css/list4.css">
       <script>
-      alert("Chào Mừng Các Bạn");
-      </script>
+      // alert("Chào Mừng Các Bạn");
+      // </script>
    </head>
    <body>
       <table>
