--- a/taothiep/Taothiep.html
+++ b/taothiep/Taothiep.html
@@ -3,6 +3,7 @@
 	<title> Thiệp chúc mừng 8/3 </title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="taothiep.css">
+	<link rel="stylesheet" type="text/css" href="taothiep2.css">
 </head>
 <body>
 	<div id="traitim1"></div>
