--- a/jquery-card/HTml/memorycard.html
+++ b/jquery-card/HTml/memorycard.html
@@ -6,15 +6,33 @@
 <body>
 	<h1>Game lật bài Naruto</h1>
 	<div id="boss">
-		<div>
-			<div >
-				<img class="hover1" src="../image/na.jpg">
-			</div>
-			<div>
-				<img class="hover2" src="../image/nar1.jpg">
-			</div>
-		</div>
+ <a href="javascript:choose(0)"><img src="../image/na.jpg" ></a>
+
+     <a href="javascript:choose(1)"><img src="../image/na.jpg" ></a>
+
+     <a href="javascript:choose(2)"><img src="../image/na.jpg" ></a>
+
+     <a href="javascript:choose(3)"><img src="../image/na.jpg"></a>
+
+    <a href="javascript:choose(4)"><img src="../image/na.jpg"></a>
+
+    <a href="javascript:choose(5)"><img src="../image/na.jpg"></a>
+
+     <a href="javascript:choose(6)"><img src="../image/na.jpg"></a>
+
+    <a href="javascript:choose(7)"><img src="../image/na.jpg"></a>
+
+    <a href="javascript:choose(8)"><img src="../image/na.jpg"></a>\
+
+     <a href="javascript:choose(9)"><img src="../image/na.jpg"></a>
+
+    <br>
 	</div>
-	<script src="card.js"></script>
+	<b style="font-size:40px;"> Diem So :</b>
+    <b style="font-size:60px;" id="matches"> 0 </b>
+    <!-- <button onclick="myFunction()"></button> -->
+    <script type="jquery-3.2.0.min.js"></script>
+	<script src="card.js"> </script>
+	<audio src="../mp3/na.mp3" autoplay></audio>
 </body>
 </html>
