--- a/list/list.html
+++ b/list/list.html
@@ -157,7 +157,7 @@
        <a  href="">  <img class="icon" src="icon/icon.png"> </a>
        <a  href="">  <img class="tuvan" src="icon/tuvan.png"> </a>
       <p class="cove" >STYLE GUIDE</p>
-      <audio src="media/divayeu.mp3" autoplay></audio>
+      
       <a href=""><img src="images/cover.jpg"     width="1680px"></a>
       <p class="cove" >TIN TỨC</p>
       <table class="sale1">
@@ -186,6 +186,6 @@
       </div>
 
    </div>
-
+<audio src="media/divayeu.mp" autoplay></audio>
    </body>
 </html>
