--- a/jquery-card/HTml/memorycard.html
+++ b/jquery-card/HTml/memorycard.html
@@ -4,35 +4,55 @@
 	<link rel="stylesheet" type="text/css" href="card.css">
 </head>
 <body>
-	<h1>Game lật bài Naruto</h1>
+	<h1>Memory Card Naruto</h1>
 	<div id="boss">
- <a href="javascript:choose(0)"><img src="../image/na.jpg" ></a>
+       <a href="javascript:choose(0)"><img class="hover1" src="../image/na.jpg" ></a>
+       
+       <a href="javascript:choose(1)"><img class="hover1" src="../image/na.jpg" ></a>
 
-     <a href="javascript:choose(1)"><img src="../image/na.jpg" ></a>
+       <a href="javascript:choose(2)"><img class="hover1" src="../image/na.jpg" ></a>
 
-     <a href="javascript:choose(2)"><img src="../image/na.jpg" ></a>
+       <a href="javascript:choose(3)"><img class="hover1" src="../image/na.jpg"></a>
 
-     <a href="javascript:choose(3)"><img src="../image/na.jpg"></a>
+       <a href="javascript:choose(4)"><img class="hover1" src="../image/na.jpg"></a>
 
-    <a href="javascript:choose(4)"><img src="../image/na.jpg"></a>
+       <a href="javascript:choose(5)"><img class="hover1" src="../image/na.jpg"></a>
+        </br>
 
-    <a href="javascript:choose(5)"><img src="../image/na.jpg"></a>
+       <a href="javascript:choose(6)"><img class="hover1" src="../image/na.jpg"></a>
 
-     <a href="javascript:choose(6)"><img src="../image/na.jpg"></a>
+       <a href="javascript:choose(7)"><img class="hover1" src="../image/na.jpg"></a>
 
-    <a href="javascript:choose(7)"><img src="../image/na.jpg"></a>
+       <a href="javascript:choose(8)"><img class="hover1" src="../image/na.jpg"></a>
 
-    <a href="javascript:choose(8)"><img src="../image/na.jpg"></a>\
+       <a href="javascript:choose(9)"><img class="hover1" src="../image/na.jpg"></a>
+     
+       <a href="javascript:choose(10)"><img class="hover1" src="../image/na.jpg"></a>
 
-     <a href="javascript:choose(9)"><img src="../image/na.jpg"></a>
+       <a href="javascript:choose(11)"><img class="hover1" src="../image/na.jpg"></a>
+         <br>
 
-    <br>
-	</div>
-	<b style="font-size:40px;"> Diem So :</b>
-    <b style="font-size:60px;" id="matches"> 0 </b>
-    <!-- <button onclick="myFunction()"></button> -->
-    <script type="jquery-3.2.0.min.js"></script>
-	<script src="card.js"> </script>
-	<audio src="../mp3/na.mp3" autoplay></audio>
+       <a href="javascript:choose(12)"><img class="hover1" src="../image/na.jpg"></a>
+
+       <a href="javascript:choose(13)"><img class="hover1" src="../image/na.jpg"></a>
+
+       <a href="javascript:choose(14)"><img class="hover1" src="../image/na.jpg"></a>
+
+       <a href="javascript:choose(15)"><img class="hover1" src="../image/na.jpg"></a>
+
+       <a href="javascript:choose(16)"><img class="hover1" src="../image/na.jpg"></a>
+
+       <a href="javascript:choose(17)"><img class="hover1" src="../image/na.jpg"></a>
+
+
+
+
+   </div>
+   <b style="font-size:40px;"> Điểm Số :</b>
+   <b style="font-size:60px;" id="matches"> 0 </b>
+   <!-- <button onclick="myFunction()"></button> -->
+   <script type="jquery-3.2.0.min.js"></script>
+   <script src="card.js"> </script>
+   <audio src="../mp3/na.mp3" autoplay></audio>
 </body>
 </html>
