--- a/jquery-card/HTml/memorycard.html
+++ b/jquery-card/HTml/memorycard.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Memory Card</title>
@@ -7,7 +8,7 @@
 	<h1>Memory Card Naruto</h1>
 	<div id="boss">
        <a href="javascript:choose(0)"><img class="hover1" src="../image/na.jpg" ></a>
-       
+
        <a href="javascript:choose(1)"><img class="hover1" src="../image/na.jpg" ></a>
 
        <a href="javascript:choose(2)"><img class="hover1" src="../image/na.jpg" ></a>
