--- a/list/sanpham.html
+++ b/list/sanpham.html
@@ -19,10 +19,12 @@
 		<td><a href=""><b> Style Guide</b> </a></td>
 		</tr>
 	</table>
+	<div id="thanhngang">
+		<p>KHATOCO - Tự Hào Thương Hiệu Quốc Gia
 
-	<table>
-
-	</table>
+</p>
+	</div>
+	
 
 </body>
 </html>
