--- a/jquery-card/HTml/memorycard.html
+++ b/jquery-card/HTml/memorycard.html
@@ -9,43 +9,43 @@
   <button onClick = "startGame()"> start game</button>
   <span id = "timerId"></span>
 	<div id="boss">
-       <a onClick="hieuung()" href="javascript:choose(0)"><img class="hover1" src="../image/na.jpg" ></a>
+       <a onClick="hieuung()" href="javascript:choose(0)"><img  src="../image/na.jpg" ></a>
 
-       <a onClick="hieuung()" href="javascript:choose(1)"><img class="hover1" src="../image/na.jpg" ></a>
+       <a onClick="hieuung()" href="javascript:choose(1)"><img src="../image/na.jpg" ></a>
 
-       <a onClick="hieuung()" href="javascript:choose(2)"><img class="hover1" src="../image/na.jpg" ></a>
+       <a onClick="hieuung()" href="javascript:choose(2)"><img src="../image/na.jpg" ></a>
 
-       <a onClick="hieuung()" href="javascript:choose(3)"><img class="hover1" src="../image/na.jpg"></a>
+       <a onClick="hieuung()" href="javascript:choose(3)"><img src="../image/na.jpg"></a>
 
-       <a onClick="hieuung()" href="javascript:choose(4)"><img class="hover1" src="../image/na.jpg"></a>
+       <a onClick="hieuung()" href="javascript:choose(4)"><img src="../image/na.jpg"></a>
 
-       <a onClick="hieuung()" href="javascript:choose(5)"><img class="hover1" src="../image/na.jpg"></a>
+       <a onClick="hieuung()" href="javascript:choose(5)"><img src="../image/na.jpg"></a>
         </br>
 
-       <a onClick="hieuung()" href="javascript:choose(6)"><img class="hover1" src="../image/na.jpg"></a>
+       <a onClick="hieuung()" href="javascript:choose(6)"><img src="../image/na.jpg"></a>
 
-       <a onClick="hieuung()" href="javascript:choose(7)"><img class="hover1" src="../image/na.jpg"></a>
+       <a onClick="hieuung()" href="javascript:choose(7)"><img src="../image/na.jpg"></a>
 
-       <a onClick="hieuung()" href="javascript:choose(8)"><img class="hover1" src="../image/na.jpg"></a>
+       <a onClick="hieuung()" href="javascript:choose(8)"><img src="../image/na.jpg"></a>
 
-       <a onClick="hieuung()" href="javascript:choose(9)"><img class="hover1" src="../image/na.jpg"></a>
+       <a onClick="hieuung()" href="javascript:choose(9)"><img src="../image/na.jpg"></a>
      
-       <a onClick="hieuung()" href="javascript:choose(10)"><img class="hover1" src="../image/na.jpg"></a>
+       <a onClick="hieuung()" href="javascript:choose(10)"><img src="../image/na.jpg"></a>
 
-       <a onClick="hieuung()" href="javascript:choose(11)"><img class="hover1" src="../image/na.jpg"></a>
+       <a onClick="hieuung()" href="javascript:choose(11)"><img src="../image/na.jpg"></a>
          <br>
 
-       <a onClick="hieuung()" href="javascript:choose(12)"><img class="hover1" src="../image/na.jpg"></a>
+       <a onClick="hieuung()" href="javascript:choose(12)"><img src="../image/na.jpg"></a>
 
-       <a onClick="hieuung()" href="javascript:choose(13)"><img class="hover1" src="../image/na.jpg"></a>
+       <a onClick="hieuung()" href="javascript:choose(13)"><img src="../image/na.jpg"></a>
 
-       <a onClick="hieuung()" href="javascript:choose(14)"><img class="hover1" src="../image/na.jpg"></a>
+       <a onClick="hieuung()" href="javascript:choose(14)"><img src="../image/na.jpg"></a>
 
-       <a onClick="hieuung()" href="javascript:choose(15)"><img class="hover1" src="../image/na.jpg"></a>
+       <a onClick="hieuung()" href="javascript:choose(15)"><img src="../image/na.jpg"></a>
 
-       <a onClick="hieuung()" href="javascript:choose(16)"><img class="hover1" src="../image/na.jpg"></a>
+       <a onClick="hieuung()" href="javascript:choose(16)"><img src="../image/na.jpg"></a>
 
-       <a onClick="hieuung()" href="javascript:choose(17)"><img class="hover1" src="../image/na.jpg"></a>
+       <a onClick="hieuung()" href="javascript:choose(17)"><img src="../image/na.jpg"></a>
 
 
 
