--- a/list/sanpham.html
+++ b/list/sanpham.html
@@ -1,17 +1,19 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Sản Phẩm</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/sp.css">
-	<!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.css">
-	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 </head>
 <body>
+	 
 	<div id="s1">
 	</div></br>
 	<table id="s2">
 		<tr>
-		<td><a href=""><b>Trang Chủ</b></a></td>
+		<td><a href=""><i style="font-size:30px" class="fa fa-home" aria-hidden="true"></i><b>Trang Chủ</b></a></td>
 		<td><a href=""><b>Sản Phẩm</b> </a></td>
 		<td><a href=""><b> Khuyến Mại</b>  </a></td>
 		<td><a href=""><b> Hàng Đồng Phục</b> </a></td>
@@ -23,7 +25,9 @@
 		<p>KHATOCO - Tự Hào Thương Hiệu Quốc Gia
 
 </p>
+
 	</div>
+
 	
 
 </body>
