--- a/login/login.html
+++ b/login/login.html
@@ -19,7 +19,7 @@
 			<p></p>
 			<input type="text" id="diachi" name="FromTo:" placeholder="Địa Chỉ" required /></br>
 			<p></p>
-			<input type="number" id="phone" name="Phone:" placeholder="Điện Thoại" required /></br>
+			<input  onkeypress='validate(event)'  id="phone" name="Phone:" placeholder="Điện Thoại" required /></br>
 			<p></p>	
 			<input type="date" id="dte" name="Birtday:">
 			<!-- <select name="year" required>
@@ -65,6 +65,16 @@ $('#scrit').on('submit', function(){
 	}
 	return a;
 });
+function validate(evt) {
+  var theEvent = evt || window.event;
+  var key = theEvent.keyCode || theEvent.which;
+  key = String.fromCharCode( key );
+  var regex = /[0-9]|\./;
+  if( !regex.test(key) ) {
+    theEvent.returnValue = false;
+    if(theEvent.preventDefault) theEvent.preventDefault();
+  }
+}
 </script>
 
 </body>
