--- a/list/list.html
+++ b/list/list.html
@@ -2,16 +2,111 @@
    <head>
       <title> Thời trang shope </title>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" type="text/css" href="css/list.css">
       <link rel="stylesheet" type="text/css" href="css/list2.css">
       <link rel="stylesheet" type="text/css" href="css/list3.css">
       <link rel="stylesheet" type="text/css" href="css/list4.css">
+      <link rel="stylesheet" type="text/css" href="css/media2.css">
+      <link rel="stylesheet" type="text/css" href="css/sp.css">
+      <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+   <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
       <script>
       // alert("Chào Mừng Các Bạn");
       // </script>
    </head>
    <body>
-      <table>
+      <header>
+         <div class="container"> 
+  <div id="myCarousel" class="carousel slide" data-ride="carousel"> 
+   <ol class="carousel-indicators"> 
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li> 
+    <li data-target="#myCarousel" data-slide-to="1"></li> 
+    <li data-target="#myCarousel" data-slide-to="2"></li> 
+   </ol> 
+   <div class="carousel-inner"> 
+    <div class="item active"> <img src="http://hocwebgiare.com/thiet_ke_web_chuan_demo/slide_banner/images/1.jpg" alt="Thiết kế 1" /> 
+     <div class="carousel-caption"> 
+      <h1>Thiết kế 1</h1> 
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p> 
+     </div> 
+    </div> 
+    <div class="item"> <img src="http://hocwebgiare.com/thiet_ke_web_chuan_demo/slide_banner/images/2.jpg" alt="Thiết kế 2" /> 
+     <div class="carousel-caption"> 
+      <h1>Thiết kế 2</h1> 
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p> 
+     </div> 
+    </div> 
+    <div class="item"> <img src="http://hocwebgiare.com/thiet_ke_web_chuan_demo/slide_banner/images/3.jpg" alt="Thiết kế 3" /> 
+     <div class="carousel-caption"> 
+      <h1>Thiết kế 3</h1> 
+      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p> 
+     </div> 
+    </div> 
+   </div> <a class="left carousel-control" href="#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a> <a class="right carousel-control" href="#myCarousel" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a> 
+  </div> 
+ </div>
+
+ <!-- menu -->
+ <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+      </header>
+
+
+      <!-- đá -->
+      <!-- <table>
       <div class="a1" style="background-color:black"; >
       <div>
          <ul class="pantu">
@@ -35,7 +130,7 @@
          <li><a href=""> Đăng Nhập</a></li>
       </ul></br>
       <ul class="home" style="background-color: #f1ece9;">
-         <li><a title="Trang chủ" href="">Trang Chủ</a></li>
+         <li><i style="font-size:25px" class="fa fa-home" aria-hidden="true"></i><a title="Trang chủ" href="">Trang Chủ</a></li>
          <li>
             <a href=""> Sản Phẩm </a>
             <ul class="sub-menu">
@@ -58,8 +153,8 @@
          <li><a href=""> Bộ Đồng Phục</a></li>
          <li><a href=""> Bộ Sưu Tập</a></li>
       </ul>
-      </table>
-      <table>
+      </table> -->
+     <!--  <table>
          <div class="can">
             <a href="" class="b2 ">
             <img src="images/image4.jpg" >
@@ -68,13 +163,11 @@
             <a href="" class="b3 "><img src="images/image2.jpg" ></a>
             <a href="" class="b4 "><img src="images/image3.jpg"></a>
          </div>
-      </table>
-      <table>
-      <div class="d1">
+      </table> -->
+      <table class="d2">
+         <div class="d1">
          <h1>MUA SẮM THEO DANH MỤC SẢN PHẨM</h1>
       </div>
-      </table>
-      <table class="d2">
                <tr >
                   <td class="dodai">
                      <a class=" item-thumb" href="">
@@ -158,7 +251,7 @@
        <a  href="">  <img class="tuvan" src="icon/tuvan.png"> </a>
       <p class="cove" >STYLE GUIDE</p>
       
-      <a href=""><img src="images/cover.jpg"     width="1680px"></a>
+      <a href=""><img id="width" src="images/cover.jpg"></a>
       <p class="cove" >TIN TỨC</p>
       <table class="sale1">
       <tr>
