--- a/list/sanpham.html
+++ b/list/sanpham.html
@@ -26,8 +26,7 @@
             </div>
         <div class="col-sm-4 text-center">
             <a href="#" class="social"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-            <a href="#" class="social"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-            <a href="#" class="social"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <!-- <a href="#" class="social"><i class="fa fa-instagram" aria-hidden="true"></i></a> -->
             <a href="#" class="social"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
             <a href="#" class="social"><i class="fa fa-google" aria-hidden="true"></i></a>
             <a href="#" class="social"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
@@ -71,6 +70,7 @@
             <li><a href="#">Hàng Mới</a></li>
             <li><a href="#">Quần Áo Nam </a></li>
             <li><a href="#">Quần Áo Nữ</a></li>
+            <li><a href="">Giầy Nam</a></li>
           </ul>
         </li>
         <li><a href="#">Giá Tốt Hôm Nay</a></li>
@@ -128,7 +128,7 @@
     </div>
 
     <div class="item">
-      <img src="http://diamondcreative.net/plus-v1.1/img/slider/slider_03.jpg" width="1366px"; height="600px";>
+      <img src="http://diamondcreative.net/plus-v1.1/img/slider/slider_06.jpg" width="1366px"; height="600px";>
       <div class="carousel-caption hidden-xs">
         <h3>New Collection touch of Chania</h3>
         <p>The atmosphere in Chania has a touch<br> of Florence and Venice.</p>
@@ -151,12 +151,13 @@
 
 <div>
   <h2 class="dmsp0"><b>SẢN PHẨM NỔI BẬT</b></h2>
-  <p style="text-align: center">NHỮNG SẢN PHẨM ĐANG ĐƯỢC ƯA CHUỘNG TẠI ....</p>
+  <p id="thanhngang"></p>
+  <p class="dmsp1">NHỮNG SẢN PHẨM ĐANG ĐƯỢC ƯA CHUỘNG TẠI ....</p>
   <table class="d2">
                <tr >
                   <td class="dodai">
                      <a class=" item-thumb" href="">
-                       <!--  <img class="hot" src="images/hot.png">  -->
+                        <img class="hot" src="images/hot.png"> 
                         <img src="images/1.jpg" >
                         <p>Áo Sơ Mi Dài Tay BamBoo Kẻ A1</p>
                         <p>421000Đ</p>
@@ -164,7 +165,7 @@
                   </td>
                   <td class="dodai">
                      <a class=" item-thumb text-center" href="">
-                        <!-- <img class="hot" src="images/hot.png"> -->
+                        <img class="hot" src="images/hot.png">
                         <img src="images/2.jpg">
                         <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
                         <p>421000Đ</p>
@@ -172,7 +173,7 @@
                   </td>
                   <td class="dodai">
                      <a class=" item-thumb" href="">
-                       <!--  <img class="hot" src="images/hot.png" > -->
+                        <img class="hot" src="images/hot.png" >
                         <img src="images/3.jpg"> 
                         <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
                         <p>421000Đ</p>
@@ -180,7 +181,7 @@
                   </td>
                   <td class="dodai">
                      <a class=" item-thumb" href="">
-                       <!--  <img class="hot" src="images/hot.png" > -->
+                        <img class="hot" src="images/hot.png" >
                         <img src="images/4.jpg">
                         <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
                         <p>421000Đ</p>
@@ -190,7 +191,7 @@
                <tr>
                   <td class="dodai">
                      <a class=" item-thumb" href="">
-                        <!-- <img class="hot" src="images/hot.png" > -->
+                        <img class="hot" src="images/hot.png" >
                         <img src="images/4.jpg">
                         <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
                         <p>421000Đ</p>
@@ -198,7 +199,7 @@
                   </td>
                   <td class="dodai">
                      <a class=" item-thumb" href="">
-                        <!-- <img class="hot" src="images/hot.png" >  -->
+                        <img class="hot" src="images/hot.png" > 
                         <img src="images/5.jpg">                       
                         <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
                         <p>421000Đ</p>
@@ -206,7 +207,7 @@
                   </td>
                   <td class="dodai">
                      <a class=" item-thumb" href="">
-                         <!-- <img class="hot" src="images/hot.png" > -->
+                         <img class="hot" src="images/hot.png" >
                         <img src="images/6.jpg"> 
                         <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
                         <p>421000Đ</p>
@@ -214,7 +215,7 @@
                   </td>
                   <td class="dodai">
                      <a class=" item-thumb" href="">
-                        <!-- <img class="hot" src="images/hot.png" > -->
+                        <img class="hot" src="images/hot.png" >
                         <img src="images/8.jpg"> 
                         <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
                         <p>421000Đ</p>
