--- a/login/login.html
+++ b/login/login.html
@@ -10,7 +10,7 @@
 		<form action="login1.html" id="scrit" name="xuly" >
 			<h2>Đăng Kí Thành Viên</h2>
 			<label><b>UserName:</b></label></br>
-			<input class="same" type="text" id="name1" name="Name:" placeholder="Họ Và Tên" required />
+			<input class="same" type="text" id="name" name="Name:" placeholder="Họ Và Tên" required />
 			<span class="error"></span></br>
 			<p></p>
 			<label><b>Email:</b></label></br>
@@ -34,7 +34,7 @@
 				<input type="radio" name="Sex:" id="female" value="f  emale"><label for="female">Nữ</label>
 			</div>
 		<p></p>
-		<button> Đăng Nhập</button>
+		<button> Đăng Kí</button>
 
 	</form>
 </div>
