--- a/list/thoitrang.html
+++ b/list/thoitrang.html
@@ -5,50 +5,40 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/sp.css">
+     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/section.css">
-    <link rel="stylesheet" type="text/css" href="css/menu.css">
-    <link rel="stylesheet" type="text/css" href="css/media2.css">
-    <link rel="stylesheet" type="text/css" href="css/media.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
   </head>
   <body>
     <nav class="top-bar">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-4">
-            <span class="nav-text" style="padding-left:28 px; border-top: 10px solid black;">
-              <i class="fa fa-phone" aria-hidden="true"></i><label style="padding-right: 15px;
- ">01638655233</label>
-              <i class="fa fa-envelope" aria-hidden="true"></i> <label>laihung53@gmail.com</label></span>
-            </div>
-            <div class="col-sm-4 text-center">
+    <div class="container-fluid">
+      <div>
+        <div class="left-top-header">
+      <div class="col-md-4" style="color: #337ab7">
+        <i class="fa fa-mobile" aria-hidden="true"></i><label>Phonenumber:0124e23143</label>
+      </div>
+        <div class="col-sm-4 text-center">
               <a href="#" class="social"><i class="fa fa-facebook" aria-hidden="true"></i></a>
               <!-- <a href="#" class="social"><i class="fa fa-instagram" aria-hidden="true"></i></a> -->
               <a href="#" class="social"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
               <a href="#" class="social"><i class="fa fa-google" aria-hidden="true"></i></a>
               <a href="#" class="social"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
             </div>
-            <div id="navbar" class="navbar-collapse collapse">
+      <div class="col-md-4">
+        <div id="navbar" class="navbar-collapse collapse">
               <form class="form-inline"> 
                 <ul class="nav navbar-nav navbar-right bdr">
-
-                  <li><a style="color: #00bcd4;" href="#" data-toggle="modal" data-target="#at-login"><i class="fa fa-user" aria-hidden="true"></i>Đăng Nhập</a></li>
-
-
-
-                  <li ><a style="color: #00bcd4;" href="#" data-toggle="modal" data-target="#at-signup"><i class="fa fa-id-card" aria-hidden="true"></i>Đăng ký</a></li>
+                  <li><a style="padding:0px;" href="#" data-toggle="modal" data-target="#at-login"><i class="fa fa-user" aria-hidden="true"></i>Đăng Nhập</a></li>
+                  <li ><a style="padding:0px; padding-left:15px;" href="#" data-toggle="modal" data-target="#at-signup"><i class="fa fa-id-card" aria-hidden="true"></i>Đăng ký</a></li>
                 </ul>
               </form>
 
-            </div><!--/.nav-collapse -->
+            </div>
           </div>
         </div>
-      </nav>   <!--TOP-NAVBAR-END-->
+      </nav>
 
       <!-- login -->
 
@@ -118,7 +108,7 @@
                               <button class="btn-gp"> <i style="color:red" class="fa fa-fw fa-google-plus pull-left" aria-hidden="true"></i>
                                 Đăng Nhập Google  </button> <br>  
                                 <div class="signup-or-separator">
-                                  <span class="h6 signup-or-separator--text">Hoặc</span>
+                                  <span class="h6 signup-or-separator--text">or</span>
                                   <hr>
                                 </div>
                                 <button type="submit" class="btn-lgin" data-toggle="modal"  data-dismiss="modal" data-target="#at-signup-filling">Đăng ký với Email</button> <hr> 
@@ -237,250 +227,21 @@
                     </div>
                   </div>
                 </div>
-                </div
-
-
-                <!--====================== NAVBAR MENU START===================-->
-
-
-                <nav class="navbar navbar-inverse">
-                  <div class="container ">
-                    <div class="navbar-header">
-                      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>                        
-                      </button>
-                      <a class="navbar-brand" href="#"><img src=""></a>
-                    </div>
-                    <div class="collapse navbar-collapse" style="padding:0px;" id="myNavbar" >
-                      <ul class="nav navbar-nav navbar-left">
-                        <li class=""><a style="font-size:20px;" href="#"><i class="fa fa-home" aria-hidden="true"></i>Trang Chủ</a></li>
-                        <li class="dropdown">
-                          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Sản Phẩm <span class="caret"></span></a>
-                          <ul class="dropdown-menu">
-                            <li><a href="#">Hàng Mới</a></li>
-                            <li><a href="#">Quần Áo Nam </a></li>
-                            <li><a href="#">Quần Áo Nữ</a></li>
-                            <li><a href="">Giầy Nam</a></li>
-                          </ul>
-                        </li>
-                        <li><a href="#">Giá Tốt Hôm Nay</a></li>
-                        <li><a href="#">Hàng Đồng Phục</a></li>
-                        <li><a href="#">Bộ Sưu Tập</a></li>
-                      </ul>
-                      <form class="navbar-form navbar-right">
-                        <div class="input-group">        
-                          <div class="input-group-btn">
-                            <button class="btn btn-default-1" type="submit">
-                              <i class="glyphicon glyphicon-search"></i>
-                            </button>
-                          </div>
-                          <input type="text" class="form-control" placeholder="Search">
-                        </div>
-
-                        <span class="cart-heart  hidden-sm hidden-xs"> 
-                          <a href="#"><i class="fa fa-user" aria-hidden="true"></i></a>
-                          <a href="#"><i class="fa fa-cart-plus" aria-hidden="true"></i></a>
-                        </span> 
-                      </form>
-
-                    </div>
-                  </div>
-                </nav>
-
-
-                <!--=================CAROUSELE START====================-->
-
-
- 
-<div style="padding-top:20px;" class="container">
-<div class="row">
-  <div class="col-md-3">
-      <p><i style="font-size:40px;" class="fa fa-car" aria-hidden="true"></i> <b>Giao Hàng Toàn Quốc</b></p>
-  </div>
-  <div class="col-md-3"><i style="font-size:40px;" class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-FANPAGE FACEBOOK</div>
-  <div class="col-md-3"><i style="font-size:40px;" class="fa fa-check-circle" aria-hidden="true"></i>CAM KẾT</div>
-  <div class="col-md-3"><i style="font-size:40px;" class="fa fa-check-circle" aria-hidden="true"></i>CHẤT LƯỢNG 100%</div>
-  </div>
-</div>
-<div class="container">
-<div class="row">
-  <div class="col-md-4">
-  <div>
-  <i style="font-size:20px;" class="fa fa-bars" aria-hidden="true"></i>  DANH MỤC SẢN PHẨM
-  </div></br>
-  <div class="btn-group-vertical" role="group" aria-label="...">
-    <button type="button" class="btn btn-default">
-      <i class="fa fa-star" aria-hidden="true"></i> ÁO SƠ MI
-    </buuton>
-    <button type="button" class="btn btn-default"><i class="fa fa-star" aria-hidden="true"></i> Áo THUN</buuton>
-</div>
-  </div>
-
-  <!-- Banner -->
-  <div class="col-md-8"> <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-      <div class="item active">
-        <img src="images/bner.jpg"  style="width:100%;">
+                </div>
       </div>
-
-      <div class="item">
-        <img src="images/bner.jpg"  style="width:100%;">
-      </div>
-    
-      <div class="item">
-        <img src="images/bner.jpg" style="width:100%;">
       </div>
     </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div></div>
+    </div>
+    </nav>
+    <div class="row">
+  <div class="col-md-4"><img src="images/gif.jpg"></div>
+  <div class="col-md-4">.col-md-4</div>
+  <div class="col-md-4">.col-md-4</div>
 </div>
-</div>
-              <!-- BODY -->
-             <!--  <div class="container">
-                <div>
-                  <div class="d1">
-                   <h2 style=" text-align:center;"><b>SẢN PHẨM ÁO NAM NỔI BẬT</b></h2>
-                   <div id="thanhngang"></div>
-                 </div>
-                 <!-- <div><a href=""><span><b>Xem Chi Tiết</b></span><span><b> -->
-                 <!-- <div class="table">
-                   <div class="dodai">
-                     <a  href="">
-                      <img src="images/1.jpg" >
-                      <p>Áo Sơ Mi Dài Tay BamBoo Kẻ A1</p>
-                      <p>421000Đ</p>
-                    </a>
-                  </div>
-                  <div class="dodai">
-                    <a href="">
-                      <img src="images/2.jpg">
-                      <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
-                      <p>421000Đ</p>
-                    </a>
-                  </div>
-                  <div class="dodai">
-                    <a href="">
-                      <img src="images/2.jpg">
-                      <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
-                      <p>421000Đ</p>
-                    </a>
-                  </div>
-                  <div class="dodai">
-                    <a href="">
-                      <img src="images/2.jpg">
-                      <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
-                      <p>421000Đ</p>
-                    </a>
-                  </div>
-                </div>
-                <div class="table">
-                 <div class="dodai">
-                   <a  href="">
-                    <img src="images/1.jpg" >
-                    <p>Áo Sơ Mi Dài Tay BamBoo Kẻ A1</p>
-                    <p>421000Đ</p>
-                  </a>
-                </div>
-                <div class="dodai">
-                  <a href="">
-                    <img src="images/2.jpg">
-                    <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
-                    <p>421000Đ</p>
-                  </a>
-                </div>
-                <div class="dodai">
-                  <a href="">
-                    <img src="images/2.jpg">
-                    <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
-                    <p>421000Đ</p>
-                  </a>
-                </div>
-                <div class="dodai">
-                  <a href="">
-                    <img src="images/2.jpg">
-                    <p>Áo Sơ Mi Tay Dài Trơn Bamboo A2</p>
-                    <p>421000Đ</p>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div> -->
 
-
-          <!--   FOOTER START================== -->
-          <div>
-            <footer class="footer">
-              <div class="container">
-                <div class="row">
-                  <div class="col-sm-3">
-                    <h4 class="title">Chứng Nhận</h4>
-                    <p>Giấy Chứng nhận đăng ký kinh doanh số ..... do Sở Kế hoạch Đầu tư .... cấp.</p>
-                    <ul class="social-icon">
-                      <a href="#"><img src="images/boc.png"></a>
-                      <a href="#" class="social"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                      <a href="#" class="social"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
-                      <a href="#" class="social"><i class="fa fa-google" aria-hidden="true"></i></a>
-                    </ul>
-                  </div>
-                  <div class="col-sm-3">
-                    <h4 class="title">THÔNG TIN CẦN THIẾT</h4>
-                    <span class="acount-icon">          
-                      <a href="#"><i class="fa fa-heart" aria-hidden="true"> Danh Sách</i></a>
-                      <a href="#"><i class="fa fa-cart-plus" aria-hidden="true"> Giỏ Hàng</i></a>
-                      <a href="#"><i class="fa fa-user" aria-hidden="true"> Hồ Sơ</i></a>           
-                    </span>
-                  </div>
-                  <div class="col-sm-3">
-                    <h4 class="title">ĐĂNG KÝ EMAIL</h4>
-                    <span>Nhận tin nhắn khuyến mãi và ưu đãi hấp dẫn.</span>
-                    <p></p>
-                    <form action="" method="post" class="subscriber_form" id="subscriber_form" accept-charset="utf8">
-                      <input type="email" name="subscribe-email" id="subscribe-email" placeholder="Email của bạn">
-                      <button type="submit">Đăng ký</button>
-                    </form>
-
-                  </div>
-                  <div class="col-sm-3">
-                    <h4 class="title">HỖ TRỢ THANH TOÁN</h4>
-                    <ul class="payment">
-                      <li><a href="#"><i class="fa fa-cc-amex" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="fa fa-credit-card" aria-hidden="true"></i></a></li>            
-                      <!-- <li><a href="#"><i class="fa fa-paypal" aria-hidden="true"></i></a></li> -->
-                      <li><a href="#"><i class="fa fa-cc-visa" aria-hidden="true"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-
-                <div class="row text-center"> © 2017. Made with VN.</div>
-              </div>
-            </footer>
-          </div>
-
-          <!-- <audio src="media/divayeu.mp3" autoplay></audio> -->
-          <script src="js/jquery-3.2.0.min.js"></script>
-          <script src="js/index.js"></script>
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        </body>
-        </html>
+  <script src="js/jquery-3.2.0.min.js"></script>
+  <script src="js/index.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  </body>
+  </html>
